[package]
name = "binance_ws"
version = "0.1.0"
authors = ["Charles Anderson <hpcngmoh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
hmac = "0.10.1"
sha2 = "0.9"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0.1", features = [ "full" ]}
async-trait = "0.1.45"
url = "2.1.1"
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
tungstenite = "0.13.0"
streamunordered = "0.5"
failure = "0.1.7"
pin-project = "1.0.5"
uuid = { version = "0.8", features = [ "v4", "serde" ] }
tokio-native-tls = "0.3.0"
futures = "0.3.9"
reqwest = { version = "*", features = ["json", "rustls-tls"] }
