[package]
name = "binance_api_async"
version = "0.1.8"
keywords = ["binance", "cyptocurrency", "trading", "algotrading", "async"]
authors = ["Charles Anderson <hpcngmoh@gmail.com>"]
edition = "2018"
description = "Binance API async implementation using tokio"
homepage = "https://github.com/bigbizze/binance_api_async"
documentation = "https://github.com/bigbizze/binance_api_async/blob/master/README.md"
repository = "https://github.com/bigbizze/binance_api_async"
readme = "README.md"
license = "MIT"

[dependencies]
hex = "0.4"
hmac = "0.10.1"
sha2 = "0.9"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0.1", features = [ "full" ]}
async-trait = "0.1.45"
url = "2.1.1"
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
tungstenite = "0.13.0"
streamunordered = "0.5"
pin-project = "1.0.5"
uuid = { version = "0.8", features = [ "v4", "serde" ] }
tokio-native-tls = "0.3.0"
futures = "0.3.9"
reqwest = { version = "0.11.1", features = ["json", "rustls-tls"] }
thiserror = "1.0"


